--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -2154,10 +2154,10 @@
                 <div class="checker-selector">
                     <div class="checker-label">Шашки</div>
                     <div class="checker-options">
-                        <div class="checker-btn white" data-color="white" role="button" aria-label="Белые шашки">
+                        <div class="checker-btn white selected" data-color="white" role="button" aria-label="Белые шашки">
                             <div class="checker-dot"></div>
                         </div>
-                        <div class="checker-btn black selected" data-color="black" role="button"
+                        <div class="checker-btn black" data-color="black" role="button"
                             aria-label="Черные шашки">
                             <div class="checker-dot"></div>
                         </div>
