--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1373,6 +1373,7 @@
         }
 
         .hints-table {
+            display: none;
             padding-top: clamp(0.5rem, 2vw, 1rem);
             overflow-x: auto;
             width: 100%;
