--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -106,6 +106,8 @@
 
         .turn-checker-indicator.black {
             background: radial-gradient(circle at 30% 30%, #3a3a3a, #1e1e1e 60%, #0f0f0f);
+            border-color: #fff;
+            box-shadow: 0 0 0 0.08em #fff;
         }
 
         .green-circle {
@@ -488,6 +490,8 @@
 
         .checker-btn.black {
             background: radial-gradient(circle at 30% 30%, #3a3a3a, #1e1e1e 60%, #0f0f0f);
+            border-color: #fff;
+            box-shadow: 0 0 0 0.05em #fff;
         }
 
         .checker-btn .checker-dot {
